--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
-<h1>Sam Varghese</h1>
-
-<img src="profile_picture.png" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styling.css"
+    <title>Sam Varghese</title>
+</head>
+<body>
+    <h1 class="headings">Sam Varghese</h1>
+    <hr>
+    <p align="center" style="background-image: url('https://thumbs.gfycat.com/BlankThoughtfulAlpaca-max-1mb.gif')"><img src="profile_picture.png"/></p>
+    <hr>
+    <p align="justify">Hi, myself Sam Varghese from <a href="https://www.google.co.in/maps/place/Paul+Classes/@22.7568126,75.8839304,17z/data=!3m1!4b1!4m5!3m4!1s0x39630345e5d65cd1:0xbf793552ce38ead5!8m2!3d22.7568108!4d75.8861271">Indore, MP</a>. I am presently a <a href="https://www.google.com/search?q=sica%20school&rlz=1C1CHBD_enIN950IN950&oq=sica+&aqs=chrome.1.69i57j0j46i175i199l2j0l2j46i175i199j69i61.3070j0j7&sourceid=chrome&ie=UTF-8&tbs=lrf:!1m4!1u2!2m2!2m1!1e1!2m1!1e2!3sIAE,lf:1,lf_ui:2&tbm=lcl&sxsrf=ALeKk01Apx60ADAvbHJ2eDRuZx8CXqXnvw:1619592565483&rflfq=1&num=10&rldimm=9671340406063970100&lqi=CgtzaWNhIHNjaG9vbFoaCgtzaWNhIHNjaG9vbCILc2ljYSBzY2hvb2ySAQZzY2hvb2w&ved=2ahUKEwjl2a68rKDwAhUEH7cAHRQJC-QQvS4wAHoECAsQHw&rlst=f#rlfi=hd:;si:9671340406063970100,l,CgtzaWNhIHNjaG9vbFoaCgtzaWNhIHNjaG9vbCILc2ljYSBzY2hvb2ySAQZzY2hvb2w;mv:[[22.755579677319027,75.89088026833987],[22.75521972268097,75.89048993166013]];tbs:lrf:!1m4!1u2!2m2!2m1!1e1!2m1!1e2!3sIAE,lf:1,lf_ui:2">Sica School</a> student trying to explore the field of computer science. I am a keen learner of new technologies and like to make out something that can benefit everyone.</p>
+</body>
+</html>
