Put fonts in em

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@1,700&display=swap"
+      rel="stylesheet"
+    />
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,7 +14,7 @@
     <title>Sam Varghese</title>
   </head>
   <body>
-    <h1 class="headings">Sam Varghese</h1>
+    <p style="font-size: 5em">Sam Varghese</p>
     <hr />
     <p align="center" style="background-image: url('gif2.gif')">
       <img src="profile_picture.png" height="300" width="300" />
