--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Sam Varghese</title>
   </head>
   <body>
-    <p style="font-size: 5em">Sam Varghese</p>
+    <p style="font-size: 5em; text-align: center">Sam Varghese</p>
     <hr />
     <p align="center" style="background-image: url('gif2.gif')">
       <img src="profile_picture.png" height="300" width="300" />
