Made website more responsive

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <title>Sam Varghese</title>
   </head>
   <body>
-    <p style="font-size: 5em; text-align: center; text-shadow: 2px 15px 5px orange;">Sam Varghese</p>
+    <p style="font-size: 8vw; text-align: center; text-shadow: 1.2vw 1vw 10px rgb(172, 172, 52);">Sam Varghese</p>
     <hr />
     <p align="center" style="background-image: url('gif2.gif')">
-      <img src="profile_picture.png" height="300" width="300" />
+      <img src="profile_picture.png" height="30%" width="30%" />
     </p>
     <hr />
     <p align="center">
