--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Sam Varghese</title>
   </head>
   <body>
-    <p style="font-size: 8vw; text-align: center; text-shadow: 1.2vw 1vw 10px rgb(172, 172, 52);">Sam Varghese</p>
+    <p style="font-size: 100px; text-align: center; text-shadow: 5px 5px 2px rgb(172, 172, 52);">Sam Varghese</p>
     <hr />
     <p align="center" style="background-image: url('gif2.gif')">
       <img src="profile_picture.png" height="30%" width="30%" />
