--- a/index.html
+++ b/index.html
@@ -11,10 +11,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="styling.css" />
+
     <title>Sam Varghese</title>
   </head>
   <body>
-    <p style="font-size: 2.5rem; text-align: center; text-shadow: 5px 5px 2px rgb(172, 172, 52);">Sam Varghese</p>
+    <p
+      style="
+        font-size: 2.5rem;
+        text-align: center;
+        text-shadow: 0.1rem 0.5rem 0.2rem rgb(172, 172, 52);
+      "
+    >
+      Sam Varghese
+    </p>
     <hr />
     <p align="center" style="background-image: url('gif2.gif')">
       <img src="profile_picture.png" height="30%" width="30%" />
