--- a/about_me.html
+++ b/about_me.html
@@ -15,15 +15,8 @@
     <title>About Sam</title>
   </head>
   <body>
-    <p
-      style="
-        font-size: 2.5rem;
-        text-align: center;
-        text-shadow: 0.1rem 0.2rem 0.2rem rgb(172, 172, 52);
-      "
-    >
-      About Sam Varghese
-    </p>
+    <h1>About Sam Varghese</h1>
+
     <hr />
     <p align="center" style="background-image: url('gif2.gif')">
       <img src="profile_picture.png" height="30%" width="30%" />
@@ -40,8 +33,8 @@
         >Sica School</a
       >
       student trying to explore the field of computer science. I am a keen
-      learner of new technologies and like to make out something that can
-      benefit everyone. I am a
+      learner of new technologies and like to create programs that can benefit
+      everyone. I am a
       <abbr title="Physics, Chemistry, Maths">PCM</abbr> student in Sica School
       with <abbr title="Computer Science">CS</abbr> as my optional subject. (In
       reality, <abbr title="Computer Science">CS</abbr> is my major subject.)
