--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <p style="text-align='center'; background-image: url('https://cdn.statically.io/img/lh6.googleusercontent.com/proxy/gRz7rUGmeHu2EulcqdOzsepZmnNbgM-2MD6syd4n-5FIbO6JHb1n_eq9p_fewu09HdWY7mimw8OVNeL2hz2IHKpyI_WbNS_0jlPf_HmVFx8iThmwvRs_L3GMf_xF5hTEeRAkdZIRgFe5=s0-d');""><img src="profile_picture.png"></p>
-    <p align="center">Welcome!, happy to have you here on my webpage. Here you can find:</p>
+    <p align="center">Welcome! happy to have you here. Here you can find:</p>
     <div style="text-align: center"><ul id="ul1">
         <li style="padding: 1vh"><a href="about_me.html">About Myself</a></li>
         <li style="padding: 1vh"><a href="123">My Achievements</a></li>
