--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p align="center">Welcome! happy to have you here. Here you can find:</p>
     <div style="text-align: center"><ul id="ul1">
         <li style="padding: 1vh"><a href="about_me.html">About Myself</a></li>
-        <li style="padding: 1vh"><a href="123">My Achievements</a></li>
+        <li style="padding: 1vh"><a href="achievements.html">My Achievements</a></li>
         <li style="padding: 1vh"><a href="123">My Skillsets</a></li>
         <li style="padding: 1vh"><a href="123">My Projects</a></li>
         <li style="padding: 1vh"><a href="123">Contact Information</a></li>
