Made portfolio some more responsive

--- a/achievements.html
+++ b/achievements.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Achievements</h1>
     <ul>
-      <div align="center" style="border: 10px solid white; padding: 20px">
+      <div align="center" style="border: 1vw solid white; padding: 1vw">
         <li>
           <a
             href="https://github.com/Sam-Varghese/Sam-Varghese/blob/main/Documents/Microsoft_Certified_Professional_Certificate_0.pdf"
