--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div style="background-image: url('https://cdn.wallpapersafari.com/37/73/jWUOhd.jpg');background-size: 100%; color: blue;"><h1 align="center">Sam Varghese</h1></div>
 </head>
 <body>
-    <p style="text-align='center'; background-image: url('https://cdn.statically.io/img/lh6.googleusercontent.com/proxy/gRz7rUGmeHu2EulcqdOzsepZmnNbgM-2MD6syd4n-5FIbO6JHb1n_eq9p_fewu09HdWY7mimw8OVNeL2hz2IHKpyI_WbNS_0jlPf_HmVFx8iThmwvRs_L3GMf_xF5hTEeRAkdZIRgFe5=s0-d');""><img src="profile_picture.png"></p>
+    <p style="text-align='center'; background-image: url('https://cdn.statically.io/img/lh6.googleusercontent.com/proxy/gRz7rUGmeHu2EulcqdOzsepZmnNbgM-2MD6syd4n-5FIbO6JHb1n_eq9p_fewu09HdWY7mimw8OVNeL2hz2IHKpyI_WbNS_0jlPf_HmVFx8iThmwvRs_L3GMf_xF5hTEeRAkdZIRgFe5=s0-d');""><a href="family-photo.jpeg"><img src="profile_picture.png"></a></p>
     <p align="center">Welcome! happy to have you here. Here you can find:</p>
     <div style="text-align: center"><ul id="ul1">
         <li style="padding: 1vh"><a href="about_me.html">About Myself</a></li>
