--- a/index.html
+++ b/index.html
@@ -6,17 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styling.css" />
     <title>Sam's Portfolio</title>
-    <div style="background-image: url('https://cdn.wallpapersafari.com/37/73/jWUOhd.jpg');background-size: 100%; color: blue;"><h1 align="center">Sam Varghese</h1></div>
+    <ul id="menu-ul">
+        <li id="menu-li">Achievements</li>
+        <li id="menu-li">Skillsets</li>
+        <li id="menu-li">Projects</li>
+        <li id="menu-li">Contact</li>
+    </ul>
+    <h1 align="center">Sam Varghese</h1>
 </head>
 <body>
-    <p style="text-align='center'; background-image: url('https://cdn.statically.io/img/lh6.googleusercontent.com/proxy/gRz7rUGmeHu2EulcqdOzsepZmnNbgM-2MD6syd4n-5FIbO6JHb1n_eq9p_fewu09HdWY7mimw8OVNeL2hz2IHKpyI_WbNS_0jlPf_HmVFx8iThmwvRs_L3GMf_xF5hTEeRAkdZIRgFe5=s0-d');""><a href="family-photo.jpeg"><img src="profile_picture.png"></a></p>
-    <p align="center">Welcome! happy to have you here. Here you can find:</p>
-    <div style="text-align: center"><ul id="ul1">
-        <li style="padding: 1vh"><a href="about_me.html">About Myself</a></li>
-        <li style="padding: 1vh"><a href="achievements.html">My Achievements</a></li>
-        <li style="padding: 1vh"><a href="123">My Skillsets</a></li>
-        <li style="padding: 1vh"><a href="123">My Projects</a></li>
-        <li style="padding: 1vh"><a href="123">Contact Information</a></li>
-    </ul></div>
+    <p style="text-align='center'; background-image: url('https://cdn.statically.io/img/lh6.googleusercontent.com/proxy/gRz7rUGmeHu2EulcqdOzsepZmnNbgM-2MD6syd4n-5FIbO6JHb1n_eq9p_fewu09HdWY7mimw8OVNeL2hz2IHKpyI_WbNS_0jlPf_HmVFx8iThmwvRs_L3GMf_xF5hTEeRAkdZIRgFe5=s0-d');""><a href="family-photo.html"><img src="profile_picture.png"></a></p>
+    <p align="center">Welcome! happy to have you here. Hi, myself Sam Varghese from
+      <a
+        href="https://www.google.co.in/maps/place/Paul+Classes/@22.7568126,75.8839304,17z/data=!3m1!4b1!4m5!3m4!1s0x39630345e5d65cd1:0xbf793552ce38ead5!8m2!3d22.7568108!4d75.8861271"
+        >Indore, MP</a
+      >. I am presently a
+      <a
+        href="https://www.google.com/search?q=sica%20school&rlz=1C1CHBD_enIN950IN950&oq=sica+&aqs=chrome.1.69i57j0j46i175i199l2j0l2j46i175i199j69i61.3070j0j7&sourceid=chrome&ie=UTF-8&tbs=lrf:!1m4!1u2!2m2!2m1!1e1!2m1!1e2!3sIAE,lf:1,lf_ui:2&tbm=lcl&sxsrf=ALeKk01Apx60ADAvbHJ2eDRuZx8CXqXnvw:1619592565483&rflfq=1&num=10&rldimm=9671340406063970100&lqi=CgtzaWNhIHNjaG9vbFoaCgtzaWNhIHNjaG9vbCILc2ljYSBzY2hvb2ySAQZzY2hvb2w&ved=2ahUKEwjl2a68rKDwAhUEH7cAHRQJC-QQvS4wAHoECAsQHw&rlst=f#rlfi=hd:;si:9671340406063970100,l,CgtzaWNhIHNjaG9vbFoaCgtzaWNhIHNjaG9vbCILc2ljYSBzY2hvb2ySAQZzY2hvb2w;mv:[[22.755579677319027,75.89088026833987],[22.75521972268097,75.89048993166013]];tbs:lrf:!1m4!1u2!2m2!2m1!1e1!2m1!1e2!3sIAE,lf:1,lf_ui:2"
+        >Sica School</a
+      >
+      student trying to explore the field of computer science. I am a keen
+      learner of new technologies and like to create programs that can benefit
+      everyone. I am a
+      <abbr title="Physics, Chemistry, Maths">PCM</abbr> student in Sica School
+      with <abbr title="Computer Science">CS</abbr> as my optional subject. (In
+      reality, <abbr title="Computer Science">CS</abbr> is my major subject.)
+    </p>
 </body>
 </html>
