Adding About My Schooling

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styling.css" />
     <title>Sam's Portfolio</title>
     <div class="menu-bar">
-      <div class="menu-items">Introduction</div>
+      <div class="menu-item-active">Introduction</div>
       <div class="menu-items">Skills</div>
       <div class="menu-items">Achievements</div>
       <div class="menu-items">Contact</div>
@@ -15,10 +15,15 @@
     <h1 align="center">Sam Varghese</h1>
 </head>
 <body>
-    <p style="text-align: 'center'; background-image: url('https://cdn.statically.io/img/lh6.googleusercontent.com/proxy/gRz7rUGmeHu2EulcqdOzsepZmnNbgM-2MD6syd4n-5FIbO6JHb1n_eq9p_fewu09HdWY7mimw8OVNeL2hz2IHKpyI_WbNS_0jlPf_HmVFx8iThmwvRs_L3GMf_xF5hTEeRAkdZIRgFe5=s0-d');"><a href="family-photo.html"><img src="profile_picture.png"></a></p>
-    <p align="center">Welcome to my portfolio! 😃👋 <br><br>Myself Sam Varghese 🙋‍♂️from <a href="https://www.google.com/maps/place/Paul+Classes/@22.7568126,75.8839304,17z/data=!3m1!4b1!4m5!3m4!1s0x39630345e5d65cd1:0xbf793552ce38ead5!8m2!3d22.756811!4d75.8861262">Indore, MP, India</a> 🌎. I am currently studying at <a href="https://www.nmims.edu/">SVKM's NMIMS</a>, <a href="https://www.nmims.edu/indorecampus">Indore</a> in <abbr title="MBA + BTech">MBATech branch</abbr> Computer Engineering 🏫.<br><br>
+    <p style="text-align: 'center'; background-image: url('https://cdn.statically.io/img/lh6.googleusercontent.com/proxy/gRz7rUGmeHu2EulcqdOzsepZmnNbgM-2MD6syd4n-5FIbO6JHb1n_eq9p_fewu09HdWY7mimw8OVNeL2hz2IHKpyI_WbNS_0jlPf_HmVFx8iThmwvRs_L3GMf_xF5hTEeRAkdZIRgFe5=s0-d');"><a href="family-photo.html"><img src="profile_picture.png" width=20%></a></p>
+    <p align="center">Welcome to my portfolio! 😃👋 <br><br>Myself Sam Varghese 🙋‍♂️, an 18 year programmer 🖥️ from <a href="https://www.google.com/maps/place/Paul+Classes/@22.7568126,75.8839304,17z/data=!3m1!4b1!4m5!3m4!1s0x39630345e5d65cd1:0xbf793552ce38ead5!8m2!3d22.756811!4d75.8861262">Indore, MP, India</a> 🌎. I am currently studying at <a href="https://www.nmims.edu/">SVKM's NMIMS</a>, <a href="https://www.nmims.edu/indorecampus">Indore</a> in <abbr title="MBA + BTech">MBATech branch</abbr> Computer Engineering 🏫.<br><br>
 
       <img src="https://imgr.search.brave.com/PtRy2av4UYsKbuO13r14yCDZO8_dLBuCHLI7JaTvwKg/fit/532/138/no/1/aHR0cDovL3d3dy5u/bWltc2luZG9yZS5v/cmcvaW1hZ2VzL25t/aW1zLWluZG9yZS5w/bmc" width=40% >
+    </p>
+    <p>
+      I have completed my schooling from <a href="http://sicaschool54.org/new54/">SICA School No. 54</a> with 93% in class12th(PCM + CS) and 96% in class 10th 😊.<br>
+
+      <img src="https://imgr.search.brave.com/IeLfSWhvOOmaPAF2f4NcX8kzIIpNBhp0Qw-S5dxKXMg/fit/1200/1200/no/1/aHR0cDovL3NpY2Fz/Y2hvb2w3OC5vcmcv/bmV3NzgvaW1hZ2Vz/L1NJQ0FfTE9HT19f/MV8uanBn" alt="" width="20%">
     </p>
 </body>
 </html>
