--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Sam's Portfolio</title>
     <div class="menu-bar">
       <div class="menu-item-active">Introduction</div>
-      <div class="menu-items">Skills</div>
+      <a href="Skills.html"><div class="menu-items">Skills</div></a>
       <div class="menu-items">Achievements</div>
       <div class="menu-items">Contact</div>
     </div>
@@ -21,7 +21,7 @@
       <img src="https://imgr.search.brave.com/PtRy2av4UYsKbuO13r14yCDZO8_dLBuCHLI7JaTvwKg/fit/532/138/no/1/aHR0cDovL3d3dy5u/bWltc2luZG9yZS5v/cmcvaW1hZ2VzL25t/aW1zLWluZG9yZS5w/bmc" width=40% >
     </p>
     <p>
-      I have completed my schooling from <a href="http://sicaschool54.org/new54/">SICA School No. 54</a> with 93% in class12th(PCM + CS) and 96% in class 10th 😊.<br>
+      I have completed my schooling from <a href="http://sicaschool54.org/new54/">SICA School No. 54</a> with 93% in class12th(PCM + CS) and 96% in class 10th 😊.<br><br>
 
       <img src="https://imgr.search.brave.com/IeLfSWhvOOmaPAF2f4NcX8kzIIpNBhp0Qw-S5dxKXMg/fit/1200/1200/no/1/aHR0cDovL3NpY2Fz/Y2hvb2w3OC5vcmcv/bmV3NzgvaW1hZ2Vz/L1NJQ0FfTE9HT19f/MV8uanBn" alt="" width="20%">
     </p>
