Added Contacts Page

--- a/Skills.html
+++ b/Skills.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="styling.css" />
-    <title>Sam's Portfolio</title>
+    <title>Sam's Skills</title>
     <div class="menu-bar">
-      <div class="menu-items">Introduction</div>
+      <a href="index.html"><div class="menu-items">About</div></a>
       <a href="Skills.html"><div class="menu-item-active">Skills</div></a>
       <div class="menu-items">Achievements</div>
-      <div class="menu-items">Contact</div>
+      <a href="Contact.html"><div class="menu-items">Contact</div></a>
     </div>
     <h1 align="center">Sam Varghese</h1>
-</head>
-<body>
+  </head>
+  <body>
     <p>
-        <abbr title="Python"><img src="python.png" class="logo"></abbr>
-        <abbr title="JavaScript"><img src="js.png" class="logo"></abbr>
-        <abbr title="HTML"><img src="html.png" class="logo"></abbr>
-        <abbr title="CSS"><img src="css.png" class="logo"></abbr>
-        <abbr title="MySQL"><img src="mysql.png" class="logo"></abbr>
-        <abbr title="Bootstrap"><img src="bootstrap.png" class="logo"></abbr>
-        <abbr title="Node"><img src="node.png" class="logo"></abbr>
-        <abbr title="MongoDB"><img src="mongo.png" class="logo"></abbr>
-        <abbr title="Flask"><img src="flask.png" class="logo"></abbr>
-        <abbr title="Matplotlib"><img src="plt.png" class="logo"></abbr>
-        <abbr title="Pandas"><img src="pd.png" class="logo" style="width: 10vw;"></abbr>
-        <abbr title="Sass"><img src="sass.png" class="logo"></abbr>
-        <abbr title="Git"><img src="git.png" class="logo"></abbr>
-        <abbr title="GitHub"><img src="github.png" class="logo"></abbr>
-        <abbr title="Powershell"><img src="powershell.png" class="logo"></abbr>
-        <abbr title="React JS"><img src="react.png" class="logo"></abbr>
-        <abbr title="Jinja"><img src="jinja.png" class="logo"></abbr>
+      <abbr title="Python"><img src="python.png" class="logo" /></abbr>
+      <abbr title="JavaScript"><img src="js.png" class="logo" /></abbr>
+      <abbr title="HTML"><img src="html.png" class="logo" /></abbr>
+      <abbr title="CSS"><img src="css.png" class="logo" /></abbr>
+      <abbr title="MySQL"><img src="mysql.png" class="logo" /></abbr>
+      <abbr title="Bootstrap"><img src="bootstrap.png" class="logo" /></abbr>
+      <abbr title="Node"><img src="node.png" class="logo" /></abbr>
+      <abbr title="MongoDB"><img src="mongo.png" class="logo" /></abbr>
+      <abbr title="Flask"><img src="flask.png" class="logo" /></abbr>
+      <abbr title="Matplotlib"><img src="plt.png" class="logo" /></abbr>
+      <abbr title="Pandas"
+        ><img src="pd.png" class="logo" style="width: 10vw"
+      /></abbr>
+      <abbr title="Sass"><img src="sass.png" class="logo" /></abbr>
+      <abbr title="Git"><img src="git.png" class="logo" /></abbr>
+      <abbr title="GitHub"><img src="github.png" class="logo" /></abbr>
+      <abbr title="Powershell"><img src="powershell.png" class="logo" /></abbr>
+      <abbr title="React JS"><img src="react.png" class="logo" /></abbr>
+      <abbr title="Jinja"><img src="jinja.png" class="logo" /></abbr>
     </p>
-</body>
+  </body>
 </html>
