--- a/Contact.html
+++ b/Contact.html
@@ -17,11 +17,11 @@
   <body>
     <p>
         <abbr title="LinkedIn"><a href="https://www.linkedin.com/in/sam-varghese-1a7701209/"><img src="linkedin.png" alt="" class="logo"></a></abbr>
-        <abbr title="Twitter"><a href="https://www.linkedin.com/in/sam-varghese-1a7701209/"><img src="twitter.png" alt="" class="logo"></a></abbr>
-        <abbr title="Github"><a href="https://www.linkedin.com/in/sam-varghese-1a7701209/"><img src="github.png" alt="" class="logo"></a></abbr>
-        <abbr title="Instagram"><a href="https://www.linkedin.com/in/sam-varghese-1a7701209/"><img src="instagram.png" alt="" class="logo"></a></abbr>
-        <abbr title="Facebook"><a href="https://www.linkedin.com/in/sam-varghese-1a7701209/"><img src="facebook.png" alt="" class="logo"></a></abbr>
-        <abbr title="Discord"><a href="https://www.linkedin.com/in/sam-varghese-1a7701209/"><img src="discord.png" alt="" class="logo"></a></abbr>
+        <abbr title="Twitter"><a href="https://twitter.com/SamVarg05580035"><img src="twitter.png" alt="" class="logo"></a></abbr>
+        <abbr title="Github"><a href="https://github.com/Sam-Varghese"><img src="github.png" alt="" class="logo"></a></abbr>
+        <abbr title="Instagram"><a href="https://www.instagram.com/samvarghesenmims/"><img src="instagram.png" alt="" class="logo"></a></abbr>
+        <abbr title="Facebook"><a href="https://www.facebook.com/SamVargheseSica/"><img src="facebook.png" alt="" class="logo"></a></abbr>
+        <abbr title="Discord"><a href="https://discord.com/invite/qW9CGayxMf"><img src="discord.png" alt="" class="logo"></a></abbr>
     </p>
   </body>
 </html>
