--- a/Skills.html
+++ b/Skills.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="styling.css" />
+    <link rel= "icon" href= "https://image.flaticon.com/icons/png/128/4727/4727496.png"/>
     <title>Sam's Skills</title>
     <div class="menu-bar">
       <a href="index.html"><div class="menu-items">About</div></a>
