--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="styling.css" />
+    <link rel= "icon" href= "https://image.flaticon.com/icons/png/128/163/163807.png"/>
     <title>Sam's Portfolio</title>
     <div class="menu-bar">
       <div class="menu-item-active">About</div>
